# groww-review-pulse

./: .env.example  .gitignore  README.md  export_dashboard.py  main.py  products.yaml  pyproject.toml  sample_reviews.csv
.github/workflows/: weekly-pulse.yml
agent/: __init__.py  __main__.py  clustering.py  config.py  storage.py  summarization.py  time_utils.py
agent/ingestion/: appstore.py  filters.py  models.py  pii.py  playstore.py
agent/mcp_client/: __init__.py  docs_ops.py  gmail_ops.py  session.py
agent/renderer/: __init__.py  docs_tree.py  email_html.py
dashboard/: dashboard.html  pulse_data.json
docs/: architecture.md  implementationPlan.md  problemStatement.md  runbook.md
docs/phases/phase-0-foundations/: edge-cases.md  evaluations.md
docs/phases/phase-1-ingestion/: edge-cases.md  evaluations.md
docs/phases/phase-2-clustering/: edge-cases.md  evaluations.md
docs/phases/phase-3-summarization/: edge-cases.md  evaluations.md
docs/phases/phase-4-renderer/: edge-cases.md  evaluations.md
docs/phases/phase-5-docs-mcp/: edge-cases.md  evaluations.md
docs/phases/phase-6-gmail-mcp/: edge-cases.md  evaluations.md
docs/phases/phase-7-orchestration/: edge-cases.md  evaluations.md
